--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -17,6 +17,8 @@
     <color name="TextHead">#23313e</color>
     <color name="NotifyText">#00ddff</color>
     <color name="indication">#ff5900</color>
+    <color name="listbagckground">#4081674b</color>
+
 
 
 
