--- a/app/src/main/res/layout/activity_add_user.xml
+++ b/app/src/main/res/layout/activity_add_user.xml
@@ -1,13 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    android:orientation="vertical"
+<LinearLayout android:orientation="vertical"
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
 
     android:gravity="center"
     android:layout_height="match_parent"
-    tools:context=".AddUser">
+    tools:context=".AddUser"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
 
 
@@ -33,69 +33,172 @@
 
 
         >
+        <LinearLayout
+            android:orientation="vertical"
+            android:layout_below="@+id/name_of_user1"
+            android:id="@+id/usrname1"
+
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+          <TextView
+              android:layout_marginTop="20dp"
+              android:layout_width="wrap_content"
+              android:layout_height="wrap_content"
+              android:text="User Name"/>
+
 
         <EditText
+            android:layout_marginTop="5dp"
+            android:imeOptions="actionNext"
             android:padding="10dp"
-            android:layout_marginTop="20dp"
             android:background="@color/gridbg"
-            android:layout_width="300dp"
-            android:layout_height="50dp"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
             android:hint="User Name"
             android:id="@+id/usrname"
-            android:layout_below="@+id/name_of_user"/>
+           />
+
+        </LinearLayout>
+
+
+        <LinearLayout
+            android:orientation="vertical"
+            android:id="@+id/name_of_user1"
+
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Name"/>
+
 
 
         <EditText
-
+            android:layout_marginTop="5dp"
+            android:imeOptions="actionNext"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:inputType="textCapSentences"
             android:padding="10dp"
             android:textSize="18dp"
             android:background="@color/gridbg"
-            android:layout_width="300dp"
-            android:layout_height="50dp"
+
             android:hint="Name"
             android:id="@+id/name_of_user"
             />
+        </LinearLayout>
+
+
+        <LinearLayout
+            android:layout_marginTop="20dp"
+            android:id="@+id/usr_contact_no1"
+            android:orientation="vertical"
+            android:layout_below="@id/usrname1"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Contact Number"/>
 
 
         <EditText
+            android:imeOptions="actionNext"
             android:inputType="number"
             android:padding="10dp"
+            android:layout_marginTop="5dp"
             android:background="@color/gridbg"
-            android:layout_marginTop="20dp"
-            android:layout_width="300dp"
-            android:layout_height="50dp"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
             android:hint="Contact Number"
-            android:layout_below="@id/usrname"
             android:id="@+id/usr_contact_no"
             />
+        </LinearLayout>
+
+
+
+        <LinearLayout
+            android:layout_marginTop="20dp"
+            android:id="@+id/user_pwrd1"
+            android:orientation="vertical"
+            android:layout_below="@id/usr_contact_no1"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Password"/>
+
+
+        <android.support.design.widget.TextInputLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            app:passwordToggleEnabled="true"
+            app:hintEnabled="false"
+            >
 
         <EditText
+            android:inputType="textPassword"
+            android:imeOptions="actionNext"
             android:padding="10dp"
             android:background="@color/gridbg"
-            android:layout_marginTop="20dp"
-            android:layout_width="300dp"
-            android:layout_height="50dp"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
             android:hint="Password"
-            android:layout_below="@id/usr_contact_no"
             android:id="@+id/user_pwrd"
             />
+        </android.support.design.widget.TextInputLayout>
+
+        </LinearLayout>
+
+
+
+
+        <LinearLayout
+            android:layout_marginTop="20dp"
+            android:id="@+id/cpwrd1"
+            android:orientation="vertical"
+            android:layout_below="@id/user_pwrd1"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Confirm Password"/>
+
+
+        <android.support.design.widget.TextInputLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            app:passwordToggleEnabled="true"
+            app:hintEnabled="false"
+            android:layout_marginTop="5dp"
+
+            >
 
         <EditText
+            android:inputType="textPassword"
+            android:imeOptions="actionDone"
             android:padding="10dp"
             android:background="@color/gridbg"
-            android:layout_marginTop="20dp"
-            android:layout_width="300dp"
-            android:layout_height="50dp"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
             android:hint="Confirm Password"
-            android:layout_below="@id/user_pwrd"
             android:id="@+id/cpwrd"
             />
 
-
+        </android.support.design.widget.TextInputLayout>
+        </LinearLayout>
 
         <RelativeLayout
             android:layout_marginTop="20dp"
-            android:layout_below="@+id/cpwrd"
+            android:layout_below="@+id/cpwrd1"
             android:layout_width="wrap_content"
             android:layout_centerHorizontal="true"
             android:layout_height="wrap_content">
