--- a/app/src/main/res/layout/activity_base.xml
+++ b/app/src/main/res/layout/activity_base.xml
@@ -16,7 +16,6 @@
         android:layout_width="match_parent"
         android:gravity="center_horizontal"
         android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
         android:background="@color/toolbar"
         android:elevation="6dp"
         android:minHeight="50dp"
@@ -30,6 +29,7 @@
             android:layout_height="match_parent"
             android:gravity="center_horizontal"
             android:layout_marginRight="60dp"
+            android:layout_marginEnd="60dp"
             android:text="Rayan"
             android:textSize="20dp"
             android:textColor="#ffff"
