--- a/app/src/main/res/layout/activity_home_edit.xml
+++ b/app/src/main/res/layout/activity_home_edit.xml
@@ -38,13 +38,18 @@
                     android:layout_width="110dp"
                     android:layout_height="110dp"
                     app:cardCornerRadius="55dp"
+                    app:cardBackgroundColor="@color/gridtext"
                     android:layout_gravity="center">
 
-                 <ImageView
+                 <TextView
+                     android:id="@+id/profile"
                     android:layout_gravity="center"
-                    android:src="@drawable/prof"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
+                     android:textSize="50dp"
+                     android:textStyle="bold"
+                     android:text="T"
+                     android:textColor="@android:color/white"
                     android:gravity="center"/>
 
                 </android.support.v7.widget.CardView>
@@ -74,6 +79,7 @@
                     android:layout_height="match_parent">
 
                     <TextView
+                        android:id="@+id/Name"
                         android:gravity="center"
                         android:layout_width="match_parent"
                         android:padding="10dp"
@@ -83,6 +89,7 @@
                         android:textStyle="bold"
                         android:layout_height="wrap_content" />
                     <TextView
+                        android:id="@+id/Uname"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:text="username"
