--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -26,6 +26,7 @@
             android:layout_height="match_parent"
             android:gravity="center_horizontal"
             android:layout_marginRight="30dp"
+            android:layout_marginEnd="30dp"
             android:text="Rayan"
             android:textSize="20dp"
             android:textColor="#ffff"
@@ -57,108 +58,188 @@
                 android:layout_height="wrap_content"
                 android:gravity="center_horizontal"
                 >
+   <android.support.design.widget.TextInputLayout
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+       android:id="@+id/OwnerName1"
+       android:layout_marginTop="20dp"
 
+       >
 
                 <EditText
+                    android:inputType="textCapSentences"
                     android:focusable="true"
                     android:focusableInTouchMode="true"
-                    android:imeOptions="actionDone"
+                    android:imeOptions="actionNext"
                     android:padding="10dp"
                     android:layout_width="300dp"
-                    android:layout_height="50dp"
+                    android:layout_height="wrap_content"
                     android:hint="Owner Name"
                     android:id="@+id/OwnerName"
-                    android:layout_marginTop="20dp"
                     android:background="@color/gridbg"
 
                     />
 
+   </android.support.design.widget.TextInputLayout>
+
+
+
+                <android.support.design.widget.TextInputLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/addrs1"
+                    android:layout_below="@+id/cmpname1"
+                    android:layout_marginTop="20dp"
+
+                    >
+
                 <EditText
-                    android:imeOptions="actionDone"
+                    android:inputType="textCapSentences"
+                    android:imeOptions="actionNext"
                     android:padding="10dp"
-                    android:layout_below="@+id/cmpname"
                     android:layout_width="300dp"
                     android:layout_height="wrap_content"
                     android:hint="Address"
                     android:id="@+id/addrs"
-                    android:layout_marginTop="20dp"
                     android:background="@color/gridbg"
                     />
+
+                </android.support.design.widget.TextInputLayout>
+
+                <android.support.design.widget.TextInputLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/email1"
+                    android:layout_below="@+id/addrs1"
+                    android:layout_marginTop="20dp"
+
+                    >
+
                 <EditText
-                    android:imeOptions="actionDone"
+                    android:inputType="textWebEmailAddress"
+                    android:imeOptions="actionNext"
                     android:padding="10dp"
                     android:layout_width="300dp"
-                    android:layout_height="50dp"
-                    android:layout_below="@+id/addrs"
+                    android:layout_height="wrap_content"
                     android:hint="Email"
                     android:id="@+id/email"
-                    android:layout_marginTop="20dp"
                     android:background="@color/gridbg"
                     />
+
+
+                </android.support.design.widget.TextInputLayout>
+
+
+                <android.support.design.widget.TextInputLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/contactno1"
+                    android:layout_below="@+id/email1"
+                    android:layout_marginTop="20dp"
+
+                    >
+
                 <EditText
-                    android:imeOptions="actionDone"
+
+                    android:imeOptions="actionNext"
                     android:padding="10dp"
                     android:layout_width="300dp"
-                    android:layout_height="50dp"
+                    android:layout_height="wrap_content"
                     android:inputType="number"
                     android:hint="Contact Number"
                     android:id="@+id/contactno"
-                    android:layout_marginTop="20dp"
-                    android:layout_below="@+id/email"
                     android:background="@color/gridbg"
                     />
+                </android.support.design.widget.TextInputLayout>
+
+                <android.support.design.widget.TextInputLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/uname1"
+                    android:layout_below="@+id/contactno1"
+                    android:layout_marginTop="20dp"
+
+                    >
+
                 <EditText
-                    android:imeOptions="actionDone"
+
+                    android:imeOptions="actionNext"
                     android:padding="10dp"
                     android:layout_width="300dp"
-                    android:layout_height="50dp"
+                    android:layout_height="wrap_content"
                     android:hint="User Name"
                     android:id="@+id/uname"
-                    android:layout_marginTop="20dp"
-                    android:layout_below="@+id/contactno"
                     android:background="@color/gridbg"
                     />
+                </android.support.design.widget.TextInputLayout>
+
+
+                <android.support.design.widget.TextInputLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/cmpname1"
+                    android:layout_below="@+id/OwnerName1"
+                    android:layout_marginTop="20dp"
+
+                    >
 
 
                 <EditText
-                    android:imeOptions="actionDone"
+                    android:inputType="textCapSentences"
+                    android:imeOptions="actionNext"
                     android:padding="10dp"
                     android:layout_width="300dp"
-                    android:layout_height="50dp"
+                    android:layout_height="wrap_content"
                     android:hint="Company Name"
                     android:id="@+id/cmpname"
-                    android:layout_marginTop="20dp"
-                    android:layout_below="@+id/OwnerName"
                     android:background="@color/gridbg"
                     />
 
+                </android.support.design.widget.TextInputLayout>
+
+                <android.support.design.widget.TextInputLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/paswd1"
+                    android:layout_below="@+id/uname1"
+                    app:passwordToggleEnabled="true"
+                    android:layout_marginTop="20dp"
+
+
+                    >
 
                 <EditText
-                    android:imeOptions="actionDone"
+                    android:imeOptions="actionNext"
                     android:padding="10dp"
                     android:layout_width="300dp"
-                    android:layout_height="50dp"
+                    android:layout_height="wrap_content"
                     android:inputType="textPassword"
                     android:hint="Password"
                     android:id="@+id/paswd"
-                    android:layout_marginTop="20dp"
-                    android:layout_below="@+id/uname"
                     android:background="@color/gridbg"
                     />
+                </android.support.design.widget.TextInputLayout>
+
+                <android.support.design.widget.TextInputLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="20dp"
+
+                    android:id="@+id/cpaswd1"
+                    android:layout_below="@+id/paswd1"
+                    app:passwordToggleEnabled="true">
                 <EditText
                     android:inputType="textPassword"
                     android:imeOptions="actionDone"
                     android:padding="10dp"
                     android:layout_width="300dp"
-                    android:layout_height="50dp"
+                    android:layout_height="wrap_content"
                     android:hint="Confirm Password"
                     android:id="@+id/cnfmpaswd"
-                    android:layout_marginTop="20dp"
-                    android:layout_below="@+id/paswd"
                     android:background="@color/gridbg"
                     />
 
-
+                </android.support.design.widget.TextInputLayout>
 
 
             </RelativeLayout>
