--- a/app/src/main/res/layout/activity_view_company.xml
+++ b/app/src/main/res/layout/activity_view_company.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#40c49a6a"
+    android:background="@color/listbagckground"
 
     xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".ViewCompanyActivity"
@@ -22,7 +22,8 @@
         android:id="@+id/fab3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:backgroundTint="@color/secondary"
+        android:backgroundTint="@color/toolbar"
+        app:backgroundTint="@color/toolbar"
         android:src="@drawable/addlist"
         android:layout_margin="20dp"
         android:layout_gravity="bottom|end"
