--- a/app/src/main/res/layout/fragment_company_ed.xml
+++ b/app/src/main/res/layout/fragment_company_ed.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView android:background="@drawable/bggg"
+<ScrollView
+    android:background="@drawable/bggg"
     android:orientation="vertical"
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
@@ -56,7 +57,7 @@
 
               />
 <LinearLayout
-    android:layout_marginTop="30dp"
+    android:layout_marginTop="20dp"
     android:orientation="vertical"
     android:layout_gravity="bottom"
     android:layout_width="match_parent"
@@ -65,7 +66,7 @@
     >
 
     <android.support.v7.widget.CardView
-        android:layout_margin="10dp"
+        android:layout_margin="5dp"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         app:cardCornerRadius="8dp"
@@ -106,7 +107,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:padding="10dp"
-                android:gravity="center"
+                android:gravity="start"
                 android:textColor="@color/headerfont"
                 android:text="N/A"
 
@@ -140,7 +141,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:padding="10dp"
-                    android:gravity="center"
+                    android:gravity="start"
 
                     android:textColor="@color/headerfont"
                     android:text="N/A"
@@ -178,7 +179,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:padding="10dp"
-                    android:gravity="center"
+                    android:gravity="start"
 
                     android:textColor="@color/headerfont"
                     android:text="N/A"
@@ -214,7 +215,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:padding="10dp"
-                    android:gravity="center"
+                    android:gravity="start"
 
                     android:textColor="@color/headerfont"
                     android:text="N/A"
@@ -241,7 +242,7 @@
                     android:padding="10dp"
                     android:textColor="@color/secondary"
                     android:textStyle="bold"
-                    android:text="Immigration Card No"
+                    android:text="Immigration Card Number"
 
                     />
                 <TextView
@@ -250,7 +251,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:padding="10dp"
-                    android:gravity="center"
+                    android:gravity="start"
 
                     android:textColor="@color/headerfont"
                     android:text="N/A"
@@ -281,12 +282,13 @@
 
                     />
                 <TextView
+                    android:inputType="textCapSentences"
                     android:id="@+id/tenancy_show"
                     android:layout_weight="1"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:padding="10dp"
-                    android:gravity="center"
+                    android:gravity="start"
                     android:textColor="@color/headerfont"
                     android:text="N/A"
 
