--- a/app/src/main/res/layout/fragment_emp.xml
+++ b/app/src/main/res/layout/fragment_emp.xml
@@ -3,6 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/listbagckground"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".EmpFragment">
 
@@ -19,7 +20,8 @@
         android:id="@+id/fab2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:backgroundTint="@color/secondary"
+        android:backgroundTint="@color/toolbar"
+        app:backgroundTint="@color/toolbar"
         android:src="@drawable/addlist"
         android:layout_margin="20dp"
         android:layout_gravity="bottom|end"
