--- a/app/src/main/res/layout/header.xml
+++ b/app/src/main/res/layout/header.xml
@@ -21,10 +21,10 @@
             >
 
          <TextView
+             android:id="@+id/drawable_prof"
              android:layout_gravity="center"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
-             android:text="A"
              android:textColor="@color/toolbar"
              android:textSize="50dp"
              android:textStyle="bold"
