--- a/app/src/main/res/layout/activity_home_edit.xml
+++ b/app/src/main/res/layout/activity_home_edit.xml
@@ -453,10 +453,10 @@
                             android:textStyle="bold"
                             android:layout_height="35dp" />
 
-                        <TextView
-                            android:textAlignment="center"
+                        <me.biubiubiu.justifytext.library.JustifyTextView
+
                             android:id="@+id/webview1"
-                            android:layout_gravity="center"
+                            android:gravity="center"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:textSize="9dp"
@@ -506,9 +506,9 @@
                             android:id="@+id/protext"
                             android:layout_height="35dp" />
 
-                        <TextView
-                            android:textAlignment="center"
+                        <me.biubiubiu.justifytext.library.JustifyTextView
                             android:gravity="center"
+
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:textSize="9dp"
@@ -562,9 +562,9 @@
                             android:layout_below="@+id/labrtxt"
                             android:layout_height="wrap_content">
 
-                            <TextView
-                                android:textAlignment="center"
-                                android:layout_gravity="center"
+                            <me.biubiubiu.justifytext.library.JustifyTextView
+                                android:gravity="center"
+
 
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
@@ -619,9 +619,8 @@
                             android:layout_height="wrap_content"
                             android:layout_below="@+id/legaltxt">
 
-                            <TextView
-                                android:textAlignment="center"
-                                android:gravity="fill"
+                            <me.biubiubiu.justifytext.library.JustifyTextView
+                                android:gravity="center"
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
                                 android:textSize="9dp"
@@ -669,9 +668,8 @@
                             android:textStyle="bold"
                             android:layout_height="35dp" />
 
-                        <TextView
-                            android:textAlignment="center"
-                            android:layout_gravity="center"
+                        <me.biubiubiu.justifytext.library.JustifyTextView
+                            android:gravity="center"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:textSize="9dp"
@@ -715,9 +713,9 @@
                             android:textStyle="bold"
                             android:layout_height="35dp" />
 
-                        <TextView
-                            android:textAlignment="center"
-                            android:layout_gravity="center"
+                        <me.biubiubiu.justifytext.library.JustifyTextView
+
+                             android:gravity="center"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:textSize="9dp"
