--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -81,7 +81,8 @@
             android:layout_marginTop="20dp"
             android:id="@+id/username1"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            app:hintEnabled="false">
 
         <EditText
             android:focusableInTouchMode="true"
@@ -101,6 +102,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             app:passwordToggleEnabled="true"
+            app:hintEnabled="false"
             >
         <android.support.design.widget.TextInputEditText
             android:id="@+id/pasword"
